--- a/api-server/package.json
+++ b/api-server/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "",
+    "child_process": "^1.0.2",
     "express": "",
     "multer": "^1.4.0"
   }
