--- a/ctrl-f-client/package.json
+++ b/ctrl-f-client/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-dropzone": "^6.0.2",
     "react-scripts": "2.0.4",
+    "reactstrap": "^6.5.0",
     "superagent": "^4.0.0-beta.5"
   },
   "scripts": {
