--- a/ctrl-f-client/package.json
+++ b/ctrl-f-client/package.json
@@ -7,8 +7,10 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-dropzone": "^6.0.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
     "reactstrap": "^6.5.0",
+    "redux": "^4.0.1",
     "superagent": "^4.0.0-beta.5"
   },
   "scripts": {
