--- a/api-server/package.json
+++ b/api-server/package.json
@@ -17,6 +17,8 @@
     "body-parser": "",
     "child_process": "^1.0.2",
     "express": "",
-    "multer": "^1.4.0"
+    "ffmpeg": "0.0.4",
+    "multer": "^1.4.0",
+    "watson-developer-cloud": "^3.11.1"
   }
 }
