--- a/api-server/package.json
+++ b/api-server/package.json
@@ -17,6 +17,7 @@
     "body-parser": "",
     "child_process": "^1.0.2",
     "express": "",
-    "multer": "^1.4.0"
+    "multer": "^1.4.0",
+    "underscore": "^1.9.1"
   }
 }
