--- a/ctrl-f-client/package.json
+++ b/ctrl-f-client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "moment": "^2.22.2",
     "rc-progress": "^2.2.6",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
